--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
            <p>Invalid City Name</p> 
         </div>
         <div class="weather">
-            <img src="images/rain.png" alt="rain image" class="weather-icon">
+            <img src="images/rain.png" alt="weathericon" class="weather-icon">
             <h1 class="temp">22&#176;c</h1>
             <h2 class="city">Jamshedpur</h2>
             <div class="details">
